Closed Bug 1627763 Opened 5 years ago Closed 5 years ago

Context Menu should launch from center of focused item, not upper left

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla77
Tracking Status
firefox76 --- verified
firefox77 --- verified

People

(Reporter: morgan, Assigned: morgan)

References

(Blocks 1 open bug)

Details

(Whiteboard: [mac2020_1][qa-triaged])

Attachments

(1 file)

We should use x_coord = rect.x + rect.height/2 and y_coord = rect.y + rect.height/2 to get the center coordinate when creating our layout point.

Assignee: nobody → mreschenberg
Blocks: 1627812
Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/94fec719ba14 Adjust coordinates of layout point for launching context menu. r=eeejay
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77

This bug affects Firefox 76, which got context menu as a new accessibility feature in MacOS. This should be uplifted to beta 76. Morgan, can you request uplift?

Flags: needinfo?(mreschenberg)

Comment on attachment 9138640 [details]
Bug 1627763: Adjust coordinates of layout point for launching context menu.

Beta/Release Uplift Approval Request

  • User impact if declined: VoiceOver users will continue to receive incorrect context menus after performing the "show menu" action.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: 1. Navigate to data:text/html,<img alt="Firefox" src="https://www.mozilla.org/media/protocol/img/logos/firefox/logo-word-hor.96f28a0f9ae6.svg" width="125" height="40"><a name="Meet the Family" href="/en-GB/firefox/accounts/" >Meet the Family</a>
  1. Enable VoiceOver
  2. Enter web content (Opt + CMD + Shift + Down)
  3. With cursor on image, launch context menu (CMD + Opt + Shift + M)

Expected: a context menu for an image (ie. Save image, etc.) is launched

  1. Hit escape to close current context menu
  2. Move to link (CMD + opt + right arrow)
  3. Launch context menu on link

Expected: context menu for link (ie. Bookmark link, etc.) is launched

  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This patch is not (yet) covered by automated tests, however our the current context menu code is not usable and, though there may be more issues to uncover, this is a substantial improvement for users.
  • String changes made/needed:
Flags: needinfo?(mreschenberg)
Attachment #9138640 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9138640 [details]
Bug 1627763: Adjust coordinates of layout point for launching context menu.

Approved for 76.0b2.

Attachment #9138640 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Whiteboard: [mac2020_1] → [mac2020_1][qa-triaged]

Confirmed issue with 76.0a1 (2020-04-05), verified fix with 76.0b2, 77.0a1 (2020-04-08) on macOS 10.15.3.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: