Bug 1627763: Adjust coordinates of layout point for launching context menu. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D69874